tests/baselines/reference/arrayTypeOfFunctionTypes.errors.txt
arrayTypeOfFunctionTypes.ts(11,11): error TS2350: Only a void function can be called with the 'new' keyword.
arrayTypeOfFunctionTypes.ts(16,11): error TS2350: Only a void function can be called with the 'new' keyword.


==== arrayTypeOfFunctionTypes.ts (2 errors) ====
    // valid uses of arrays of function types
    
    var x: () => string[];
    var r = x[1];
    var r2 = r();
    var r2b = new r();
    
    var x2: { (): string }[];
    var r3 = x2[1];
    var r4 = r3();
    var r4b = new r3(); // error
              ~~~~~~~~
!!! error TS2350: Only a void function can be called with the 'new' keyword.
    
    var x3: Array<() => string>;
    var r5 = x2[1];
    var r6 = r5();
    var r6b = new r5(); // error
              ~~~~~~~~
!!! error TS2350: Only a void function can be called with the 'new' keyword.